[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "idelm-surgery-generator"
version = "0.1.0"
description = "Synthetic surgical scheduling data generator for OR scheduling research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "numpy-typing>=1.1.1",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
]

[project.scripts]
idelm-surgery-generate = "idelm_surgery_generator.main:main"
idelm-surgery-visualize = "idelm_surgery_generator.visualize:visualize"
